# CppTemplate

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  HelloWorldClass_8hpp_source.html  README.md  dir_57cc1eceb81ab90f0f53a3b105be807b.html  dir_57cc1eceb81ab90f0f53a3b105be807b.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  index.html  main.cpp  main.test.cpp  main_8cpp.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake-single-platform.yml  doxygen.yml  iwyu.yml
docs/: Doxyfile
lib_a/: CMakeLists.txt  HelloWorldClass.cpp  HelloWorldClass.hpp  HelloWorldClass.test.cpp
search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  pages_0.js  searchdata.js
